@@ -30,11 +30,13 @@ public class JdbcGlobalState {
     public static final WeakMap<Object, String> statementSqlMap = WeakConcurrent.buildMap();
     public static final WeakMap<Connection, ConnectionMetaData> metaDataMap = WeakConcurrent.buildMap();
     public static final WeakMap<Class<?>, Boolean> metadataSupported = WeakConcurrent.buildMap();
+    public static final WeakMap<Class<?>, Boolean> catalogSupported = WeakConcurrent.buildMap();
     public static final WeakMap<Class<?>, Boolean> connectionSupported = WeakConcurrent.buildMap();
 
     public static void clearInternalStorage() {
         metaDataMap.clear();
         metadataSupported.clear();
+        catalogSupported.clear();
         connectionSupported.clear();
     }
 
