@@ -110,6 +110,7 @@ public abstract class AbstractJdbcInstrumentationTest extends AbstractInstrument
         executeTest(() -> testUpdateStatement(true));
         executeTest(this::testStatementNotSupportingConnection);
         executeTest(this::testStatementWithoutConnectionMetadata);
+        executeTest(this::testStatementWithoutConnectionGetCatalog);
 
         executeTest(() -> testUpdate(Statement::executeUpdate));
         executeTest(() -> testUpdate(Statement::executeLargeUpdate));
@@ -206,6 +207,31 @@ public abstract class AbstractJdbcInstrumentationTest extends AbstractInstrument
         assertThat(statement.getConnection()).isSameAs(testConnection);
 
         checkWithoutConnectionMetadata(statement, testConnection::getUnsupportedThrownCount);
+    }
+
+    private void testStatementWithoutConnectionGetCatalog() throws SQLException {
+        TestConnection testConnection = new TestConnection(connection);
+        testConnection.setGetMetadataSupported(true);
+        testConnection.setGetCatalogSupported(false);
+        TestStatement statement = new TestStatement(testConnection.createStatement());
+
+        assertThat(statement.getConnection()).isSameAs(testConnection);
+        assertThat(testConnection.getUnsupportedThrownCount()).isZero();
+
+        final String sql = "UPDATE ELASTIC_APM SET BAR='AFTER1' WHERE FOO=11";
+        boolean isResultSet = statement.execute(sql);
+
+        assertThat(testConnection.getUnsupportedThrownCount()).isEqualTo(1);
+        assertThat(isResultSet).isFalse();
+
+        assertSpanRecorded(sql, false, -1, null);
+
+        // try to execute statement again, should not throw again
+        statement.execute(sql);
+
+        assertThat(testConnection.getUnsupportedThrownCount())
+            .describedAs("unsupported exception should only be thrown once")
+            .isEqualTo(1);
     }
 
     private interface ThrownCountCheck {
@@ -391,6 +417,10 @@ public abstract class AbstractJdbcInstrumentationTest extends AbstractInstrument
     }
 
     private Span assertSpanRecorded(String rawSql, boolean preparedStatement, long expectedAffectedRows) throws SQLException {
+        return assertSpanRecorded(rawSql, preparedStatement, expectedAffectedRows, connection.getCatalog());
+    }
+
+    private Span assertSpanRecorded(String rawSql, boolean preparedStatement, long expectedAffectedRows, String expectedDbInstance) throws SQLException {
         assertThat(reporter.getSpans())
             .describedAs("one span is expected")
             .hasSize(1);
@@ -405,7 +435,7 @@ public abstract class AbstractJdbcInstrumentationTest extends AbstractInstrument
         Db db = span.getContext().getDb();
         assertThat(db.getStatement()).isEqualTo(rawSql);
         DatabaseMetaData metaData = connection.getMetaData();
-        assertThat(db.getInstance()).isEqualToIgnoringCase(connection.getCatalog());
+        assertThat(db.getInstance()).isEqualToIgnoringCase(expectedDbInstance);
         assertThat(db.getUser()).isEqualToIgnoringCase(metaData.getUserName());
         assertThat(db.getType()).isEqualToIgnoringCase("sql");
 
