@@ -32,6 +32,7 @@ endif::[]
 
 [float]
 ===== Bug fixes
+* Gracefully handle JDBC drivers which don't support `Connection#getCatalog` - {pull}2340[#2340]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
